[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/BlockAbility.gd" type="Script" id=1]
[ext_resource path="res://SFX/sfx_UI_01.wav" type="AudioStream" id=2]

[sub_resource type="Animation" id=1]
resource_name = "anim_blockability_fade"
tracks/0/type = "value"
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "anim_blockability_text"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 2, 2.1, 2.2, 2.4, 2.5, 2.6, 2.7, 2.9, 3, 3.1, 3.2, 3.4, 3.5, 3.6, 3.7, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "Y", "Yo", "You", "You'", "You'v", "You've", "You've c", "You've cl", "You've cle", "You've clea", "You've clear", "You've cleare", "You've cleared", "You've cleared t", "You've cleared th", "You've cleared the", "You've cleared the fi", "You've cleared the fir", "You've cleared the firs", "You've cleared the first", "You've cleared the first e", "You've cleared the first ev", "You've cleared the first evi", "You've cleared the first evil.", "You've cleared the first evil.

T", "You've cleared the first evil.

Ta", "You've cleared the first evil.

Tak", "You've cleared the first evil.

Take", "You've cleared the first evil.

Take t", "You've cleared the first evil.

Take th", "You've cleared the first evil.

Take thi", "You've cleared the first evil.

Take this", "You've cleared the first evil.

Take this.", "You've cleared the first evil.

Take this..", "You've cleared the first evil.

Take this..." ]
}

[sub_resource type="Animation" id=3]
resource_name = "anim_blockability_welldone"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("WellDone:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7, 0.8, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "", "W", "We", "Wel", "Well", "Well D", "Well Do", "Well Don", "Well Done" ]
}

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="BlockAbility" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WellDone" type="Label" parent="."]
margin_left = 24.0
margin_top = 53.0
margin_right = 67.0
margin_bottom = 65.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/anim_blockability_fade = SubResource( 1 )
anims/anim_blockability_text = SubResource( 2 )
anims/anim_blockability_welldone = SubResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 10.0
margin_top = 70.0
margin_right = 87.0
margin_bottom = 110.0
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b_blockunlock" type="Button" parent="."]
visible = false
margin_left = 29.118
margin_top = 105.148
margin_right = 61.118
margin_bottom = 118.148
rect_min_size = Vector2( 32, 13 )
text = "Block"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -30.0
[connection signal="mouse_entered" from="b_blockunlock" to="." method="_on_b_blockunlock_mouse_entered"]
[connection signal="pressed" from="b_blockunlock" to="." method="_on_b_blockunlock_pressed"]
